﻿dotNetRDF
=========

A Library for RDF manipulation and parsing in .Net using C# 3.0

Robert Vesse 2009-10
rvesse@vdesign-studios.com

Change Log
----------

This represents a summary of additions, changes and removals for the 0.4.0 release of dotNetRDF

Added
- Support for Variable Nodes
- New N3RulesReasoner which can process simple N3 rules of the form { } => { }

Changed
- Bug Fixes
 - Notation 3 Parser allows variable quantification directives in Graph Literals
- Parsing
 - Notation 3 Parser supports Variables, @forSome and @forAll properly

Removed
- Obsolete VDS.RDF.Web classes removed
- Removed obsolete methods related to Labyrinth SPARQL engine
- Removed dataset management methods from ITripleStore and implemenations

   



